# socp-lp-solver

./: README.md  pyproject.toml
src/socp_lp_solver/: __init__.py  socp_lp.py
src/socp_lp_solver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/socq_lp_solver.egg-info/: PKG-INFO  SOURCES.txt
