[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socp-lp-solver"
version = "0.1.0"
dependencies = [
  "numpy",
  "scikit-learn",
  "cvxpy",
  "ecos"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
